--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ generate_sources_jar = true
 generate_javadocs_jar = false
 
 # Mod Info
-mod_id = example_mod
-mod_name = Example Mod
-root_package = com.example
+mod_id = lanuensis
+mod_name = Lanuensis
+root_package = org.flotilla
 mod_version = 0.0.1
 
 # Mapping Properties
